manifests/go-app.yaml
# 1. Redis Database (StatefulSet)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: default-app
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
---
# 2. Redis Service (Internal)
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: default-app
spec:
  selector:
    app: redis
  ports:
    - port: 6379
---
# 3. The Go App (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: default-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: ghcr.io/jaimindevops/my-ops-platform:latest # We will update this to your Go image later
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
# 4. Go App Service (External Access)
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: default-app
spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
